--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="TODO App" />
-    <title>TODO App"</title>
+    <title>TODO App</title>
     <link rel="icon" type="image/png" href="./src/assets/react.svg" />
 
     <link rel="stylesheet" type="text/css" href="" />
